add core structure for home page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     <title>Love Running</title>
 </head>
 <body>
-    Hello World
+    <header>
+        Header
+    </header>
+    <section>
+        Main Image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running locations, distances and times
+    </section>
+    <footer>
+        social links
+    </footer>
 </body>
 </html>
