--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Love Running club for runners in Tullamore, Ireland">
-    <meta name="keywords" content="love running, running club, ireland, tullamore">
+    <meta
+      name="description"
+      content="Love Running club for runners in Tullamore, Ireland"
+    />
+    <meta
+      name="keywords"
+      content="love running, running club, ireland, tullamore"
+    />
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Love Running</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        Header
+      <a href="index.html">
+        <h1>Love Running</h1>
+      </a>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">Sign Up</a></li>
+        </ul>
+      </nav>
     </header>
-    <section>
-        Main Image
-    </section>
-    <section>
-        Club Ethos
-    </section>
-    <section>
-        Running locations, distances and times
-    </section>
-    <footer>
-        social links
-    </footer>
-</body>
+    <section>Main Image</section>
+    <section>Club Ethos</section>
+    <section>Running locations, distances and times</section>
+    <footer>social links</footer>
+  </body>
 </html>
