--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <meta
       name="description"
-      content="Love Running club for runners in Tullamore, Ireland"
+      content="Love Running club for runners in Dublin, Ireland"
     />
     <meta
       name="keywords"
-      content="love running, running club, ireland, tullamore"
+      content="love running, running club, ireland, dublin"
     />
 
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Love Running</title>
   </head>
+
   <body>
     <header>
       <a href="index.html">
@@ -36,9 +35,11 @@
         </ul>
       </nav>
     </header>
-    <section>Main Image</section>
+    <section>
+      <div id="hero-image"></div>
+    </section>
     <section>Club Ethos</section>
     <section>Running locations, distances and times</section>
-    <footer>social links</footer>
+    <footer>social links here</footer>
   </body>
 </html>
