add hero image and animaation for zoom

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </ul>
       </nav>
     </header>
-    <section>
+    <section id="hero-outer">
       <div id="hero-image"></div>
     </section>
     <section>Club Ethos</section>
