--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
     </section>
     <footer>
-      <ul>
+      <ul class="social-networks">
         <li>
           <a
             href="https://facebook.com"
